...
        android:hint="Email"
        android:textColorHint="#DC143C"
        android:inputType="textEmailAddress"
        android:textSize="25sp"
        />
    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:layout_marginTop="15sp"
        android:textColorHint="#DC143C"
        android:inputType="textPassword"
        android:textSize="25sp"
        />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="Login"
        android:textSize="25sp"
        android:textColor="#00BFFF" />
...
