<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign up"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="30dp"
            android:fontFamily="cursive"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfile"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:src="@drawable/user"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/etfirstname"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:background="@drawable/edittext_style"
            android:hint="First name"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/etlastname"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:background="@drawable/edittext_style"
            android:hint="Last name"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_style"
            android:hint="Contact no."
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:background="@drawable/edittext_style"
            android:hint="Email"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/etpassword"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_style"
            android:hint="Password"
            android:inputType="textPassword"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/etrepasword"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:background="@drawable/edittext_style"
            android:hint="Confirm password"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnregister"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="Sign up"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already Registered? Login!!"
            android:layout_marginTop="20dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed-medium"/>


    </LinearLayout>


</ScrollView>